--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>OCULAR - Homepage</title>
-  <link rel="stylesheet" href="css/reset.css"> <!-- Resets default css formating -->
+  <link rel="stylesheet" href="css/reset.css"> <!-- Resets css -->
   <link rel="stylesheet" href="css/main.css"> <!-- Loads custom css -->
+  <link rel="icon" href="images/Logo - Favicon.png" type="image/png"> <!-- Sets tab icon -->
 </head>
 
 <!-- Website Body -->
