--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <title>OCULAR - Homepage</title>
   <link rel="stylesheet" href="css/reset.css"> <!-- Resets css -->
   <link rel="stylesheet" href="css/main.css"> <!-- Loads custom css -->
+  <link rel="icon" href="images/Logo - Favicon.png" type="image/png"> <!-- Sets tab icon -->
 </head>
 
 <!-- Website Body -->
